Fixed minor alignment issue

--- a/res/css/_content.sass
+++ b/res/css/_content.sass
@@ -303,11 +303,12 @@
               @media(max-width: 800px)
                 width: initial
                 padding: 0
+                display: inline
+                line-height: 1
 
               &:after
                 @media(max-width: 800px)
                   content: ': '
-                  margin-right: 8px
 
             .content
               flex-grow: 1
